TP-Integrador/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> START content END
Rule 2     content -> statement_list
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> empty
Rule 5     statement -> content_no_return
Rule 6     statement -> exp
Rule 7     content_no_return -> function
Rule 8     content_no_return -> function_return
Rule 9     content_no_return -> loop
Rule 10    content_no_return -> conditional
Rule 11    content_no_return -> var
Rule 12    content_no_return -> assign
Rule 13    content_no_return -> list_assign
Rule 14    content_no_return -> add_list_item
Rule 15    content_no_return -> console
Rule 16    console -> CONSOLE LPAREN args RPAREN
Rule 17    function -> FUNC ID LPAREN opt_param_list RPAREN LBRACE content RBRACE
Rule 18    function_return -> FUNC ID LPAREN opt_param_list RPAREN COLON type LBRACE content RETURN exp RBRACE
Rule 19    opt_param_list -> param_list
Rule 20    opt_param_list -> empty
Rule 21    param_list -> param_list COMMA param
Rule 22    param_list -> param
Rule 23    param -> type ID opt_default
Rule 24    opt_default -> COLON exp
Rule 25    opt_default -> empty
Rule 26    call_func -> ID LPAREN args RPAREN
Rule 27    call_func -> ID LPAREN RPAREN
Rule 28    conditional -> IF LPAREN exp RPAREN LBRACE content RBRACE
Rule 29    conditional -> IF LPAREN exp RPAREN LBRACE content RBRACE ELSE LBRACE content RBRACE
Rule 30    conditional -> IF LPAREN exp RPAREN LBRACE content RBRACE ELSE conditional
Rule 31    loop -> LOOP LPAREN ID IN range RPAREN LBRACE content RBRACE
Rule 32    range -> RANGE LPAREN exp COMMA exp RPAREN
Rule 33    range -> RANGE LPAREN exp RPAREN
Rule 34    range -> RANGE LPAREN exp COMMA exp COMMA exp RPAREN
Rule 35    exp -> exp operator exp
Rule 36    exp -> op_bool_un exp
Rule 37    exp -> primary_exp
Rule 38    primary_exp -> call_func
Rule 39    primary_exp -> primitive
Rule 40    primary_exp -> id
Rule 41    primary_exp -> len_list_item
Rule 42    primary_exp -> remove_list_item
Rule 43    primary_exp -> read_list_item
Rule 44    primary_exp -> has_list_item
Rule 45    primary_exp -> list
Rule 46    primary_exp -> LPAREN exp RPAREN
Rule 47    var -> type ID COLON exp
Rule 48    assign -> ID COLON exp
Rule 49    args -> args COMMA exp
Rule 50    args -> exp
Rule 51    id -> ID
Rule 52    operator -> PLUS
Rule 53    operator -> MINUS
Rule 54    operator -> MULTIPLY
Rule 55    operator -> DIVIDE
Rule 56    operator -> AND
Rule 57    operator -> OR
Rule 58    operator -> LT
Rule 59    operator -> GT
Rule 60    operator -> LE
Rule 61    operator -> GE
Rule 62    operator -> EQ
Rule 63    operator -> NE
Rule 64    op_bool_un -> NOT
Rule 65    type -> STR
Rule 66    type -> NUM
Rule 67    type -> BOOL
Rule 68    type -> LIST LT type GT
Rule 69    list -> LBRACKET list_content RBRACKET
Rule 70    list -> LBRACKET RBRACKET
Rule 71    list_content -> list_content COMMA exp
Rule 72    list_content -> exp
Rule 73    add_list_item -> ADD LPAREN exp COMMA exp RPAREN
Rule 74    len_list_item -> SIZE LPAREN exp RPAREN
Rule 75    read_list_item -> id LBRACKET exp RBRACKET
Rule 76    remove_list_item -> REMOVE LPAREN exp RPAREN
Rule 77    has_list_item -> HAS LPAREN exp COMMA primitive RPAREN
Rule 78    list_assign -> id LBRACKET exp RBRACKET COLON exp
Rule 79    primitive -> NUMBER
Rule 80    primitive -> STRING
Rule 81    primitive -> TRUE
Rule 82    primitive -> FALSE
Rule 83    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 73
AND                  : 56
BOOL                 : 67
COLON                : 18 24 47 48 78
COMMA                : 21 32 34 34 49 71 73 77
COMMENT              : 
CONSOLE              : 16
DIVIDE               : 55
ELSE                 : 29 30
END                  : 1
EQ                   : 62
FALSE                : 82
FUNC                 : 17 18
GE                   : 61
GT                   : 59 68
HAS                  : 77
ID                   : 17 18 23 26 27 31 47 48 51
IF                   : 28 29 30
IN                   : 31
LBRACE               : 17 18 28 29 29 30 31
LBRACKET             : 69 70 75 78
LE                   : 60
LIST                 : 68
LOOP                 : 31
LPAREN               : 16 17 18 26 27 28 29 30 31 32 33 34 46 73 74 76 77
LT                   : 58 68
MINUS                : 53
MULTIPLY             : 54
NE                   : 63
NOT                  : 64
NUM                  : 66
NUMBER               : 79
OR                   : 57
PLUS                 : 52
RANGE                : 32 33 34
RBRACE               : 17 18 28 29 29 30 31
RBRACKET             : 69 70 75 78
REMOVE               : 76
RETURN               : 18
RPAREN               : 16 17 18 26 27 28 29 30 31 32 33 34 46 73 74 76 77
SIZE                 : 74
START                : 1
STR                  : 65
STRING               : 80
TRUE                 : 81
error                : 

Nonterminals, with rules where they appear

add_list_item        : 14
args                 : 16 26 49
assign               : 12
call_func            : 38
conditional          : 10 30
console              : 15
content              : 1 17 18 28 29 29 30 31
content_no_return    : 5
empty                : 4 20 25
exp                  : 6 18 24 28 29 30 32 32 33 34 34 34 35 35 36 46 47 48 49 50 71 72 73 73 74 75 76 77 78 78
function             : 7
function_return      : 8
has_list_item        : 44
id                   : 40 75 78
len_list_item        : 41
list                 : 45
list_assign          : 13
list_content         : 69 71
loop                 : 9
op_bool_un           : 36
operator             : 35
opt_default          : 23
opt_param_list       : 17 18
param                : 21 22
param_list           : 19 21
primary_exp          : 37
primitive            : 39 77
program              : 0
range                : 31
read_list_item       : 43
remove_list_item     : 42
statement            : 3
statement_list       : 2 3
type                 : 18 23 47 68
var                  : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START content END

    START           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> START . content END
    (2) content -> . statement_list
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . empty
    (83) empty -> .

    FUNC            reduce using rule 83 (empty -> .)
    LOOP            reduce using rule 83 (empty -> .)
    IF              reduce using rule 83 (empty -> .)
    ID              reduce using rule 83 (empty -> .)
    ADD             reduce using rule 83 (empty -> .)
    CONSOLE         reduce using rule 83 (empty -> .)
    NOT             reduce using rule 83 (empty -> .)
    LPAREN          reduce using rule 83 (empty -> .)
    STR             reduce using rule 83 (empty -> .)
    NUM             reduce using rule 83 (empty -> .)
    BOOL            reduce using rule 83 (empty -> .)
    LIST            reduce using rule 83 (empty -> .)
    NUMBER          reduce using rule 83 (empty -> .)
    STRING          reduce using rule 83 (empty -> .)
    TRUE            reduce using rule 83 (empty -> .)
    FALSE           reduce using rule 83 (empty -> .)
    SIZE            reduce using rule 83 (empty -> .)
    REMOVE          reduce using rule 83 (empty -> .)
    HAS             reduce using rule 83 (empty -> .)
    LBRACKET        reduce using rule 83 (empty -> .)
    END             reduce using rule 83 (empty -> .)

    content                        shift and go to state 3
    statement_list                 shift and go to state 4
    empty                          shift and go to state 5

state 3

    (1) program -> START content . END

    END             shift and go to state 6


state 4

    (2) content -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement -> . content_no_return
    (6) statement -> . exp
    (7) content_no_return -> . function
    (8) content_no_return -> . function_return
    (9) content_no_return -> . loop
    (10) content_no_return -> . conditional
    (11) content_no_return -> . var
    (12) content_no_return -> . assign
    (13) content_no_return -> . list_assign
    (14) content_no_return -> . add_list_item
    (15) content_no_return -> . console
    (35) exp -> . exp operator exp
    (36) exp -> . op_bool_un exp
    (37) exp -> . primary_exp
    (17) function -> . FUNC ID LPAREN opt_param_list RPAREN LBRACE content RBRACE
    (18) function_return -> . FUNC ID LPAREN opt_param_list RPAREN COLON type LBRACE content RETURN exp RBRACE
    (31) loop -> . LOOP LPAREN ID IN range RPAREN LBRACE content RBRACE
    (28) conditional -> . IF LPAREN exp RPAREN LBRACE content RBRACE
    (29) conditional -> . IF LPAREN exp RPAREN LBRACE content RBRACE ELSE LBRACE content RBRACE
    (30) conditional -> . IF LPAREN exp RPAREN LBRACE content RBRACE ELSE conditional
    (47) var -> . type ID COLON exp
    (48) assign -> . ID COLON exp
    (78) list_assign -> . id LBRACKET exp RBRACKET COLON exp
    (73) add_list_item -> . ADD LPAREN exp COMMA exp RPAREN
    (16) console -> . CONSOLE LPAREN args RPAREN
    (64) op_bool_un -> . NOT
    (38) primary_exp -> . call_func
    (39) primary_exp -> . primitive
    (40) primary_exp -> . id
    (41) primary_exp -> . len_list_item
    (42) primary_exp -> . remove_list_item
    (43) primary_exp -> . read_list_item
    (44) primary_exp -> . has_list_item
    (45) primary_exp -> . list
    (46) primary_exp -> . LPAREN exp RPAREN
    (65) type -> . STR
    (66) type -> . NUM
    (67) type -> . BOOL
    (68) type -> . LIST LT type GT
    (51) id -> . ID
    (26) call_func -> . ID LPAREN args RPAREN
    (27) call_func -> . ID LPAREN RPAREN
    (79) primitive -> . NUMBER
    (80) primitive -> . STRING
    (81) primitive -> . TRUE
    (82) primitive -> . FALSE
    (74) len_list_item -> . SIZE LPAREN exp RPAREN
    (76) remove_list_item -> . REMOVE LPAREN exp RPAREN
    (75) read_list_item -> . id LBRACKET exp RBRACKET
    (77) has_list_item -> . HAS LPAREN exp COMMA primitive RPAREN
    (69) list -> . LBRACKET list_content RBRACKET
    (70) list -> . LBRACKET RBRACKET

    END             reduce using rule 2 (content -> statement_list .)
    RBRACE          reduce using rule 2 (content -> statement_list .)
    RETURN          reduce using rule 2 (content -> statement_list .)
    FUNC            shift and go to state 21
    LOOP            shift and go to state 25
    IF              shift and go to state 26
    ID              shift and go to state 22
    ADD             shift and go to state 29
    CONSOLE         shift and go to state 30
    NOT             shift and go to state 31
    LPAREN          shift and go to state 23
    STR             shift and go to state 39
    NUM             shift and go to state 40
    BOOL            shift and go to state 41
    LIST            shift and go to state 42
    NUMBER          shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    SIZE            shift and go to state 47
    REMOVE          shift and go to state 48
    HAS             shift and go to state 49
    LBRACKET        shift and go to state 28

    statement                      shift and go to state 7
    content_no_return              shift and go to state 8
    exp                            shift and go to state 9
    function                       shift and go to state 10
    function_return                shift and go to state 11
    loop                           shift and go to state 12
    conditional                    shift and go to state 13
    var                            shift and go to state 14
    assign                         shift and go to state 15
    list_assign                    shift and go to state 16
    add_list_item                  shift and go to state 17
    console                        shift and go to state 18
    op_bool_un                     shift and go to state 19
    primary_exp                    shift and go to state 20
    type                           shift and go to state 24
    id                             shift and go to state 27
    call_func                      shift and go to state 32
    primitive                      shift and go to state 33
    len_list_item                  shift and go to state 34
    remove_list_item               shift and go to state 35
    read_list_item                 shift and go to state 36
    has_list_item                  shift and go to state 37
    list                           shift and go to state 38

state 5

    (4) statement_list -> empty .

    FUNC            reduce using rule 4 (statement_list -> empty .)
    LOOP            reduce using rule 4 (statement_list -> empty .)
    IF              reduce using rule 4 (statement_list -> empty .)
    ID              reduce using rule 4 (statement_list -> empty .)
    ADD             reduce using rule 4 (statement_list -> empty .)
    CONSOLE         reduce using rule 4 (statement_list -> empty .)
    NOT             reduce using rule 4 (statement_list -> empty .)
    LPAREN          reduce using rule 4 (statement_list -> empty .)
    STR             reduce using rule 4 (statement_list -> empty .)
    NUM             reduce using rule 4 (statement_list -> empty .)
    BOOL            reduce using rule 4 (statement_list -> empty .)
    LIST            reduce using rule 4 (statement_list -> empty .)
    NUMBER          reduce using rule 4 (statement_list -> empty .)
    STRING          reduce using rule 4 (statement_list -> empty .)
    TRUE            reduce using rule 4 (statement_list -> empty .)
    FALSE           reduce using rule 4 (statement_list -> empty .)
    SIZE            reduce using rule 4 (statement_list -> empty .)
    REMOVE          reduce using rule 4 (statement_list -> empty .)
    HAS             reduce using rule 4 (statement_list -> empty .)
    LBRACKET        reduce using rule 4 (statement_list -> empty .)
    END             reduce using rule 4 (statement_list -> empty .)
    RBRACE          reduce using rule 4 (statement_list -> empty .)
    RETURN          reduce using rule 4 (statement_list -> empty .)


state 6

    (1) program -> START content END .

    $end            reduce using rule 1 (program -> START content END .)


state 7

    (3) statement_list -> statement_list statement .

    FUNC            reduce using rule 3 (statement_list -> statement_list statement .)
    LOOP            reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    ADD             reduce using rule 3 (statement_list -> statement_list statement .)
    CONSOLE         reduce using rule 3 (statement_list -> statement_list statement .)
    NOT             reduce using rule 3 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement_list statement .)
    STR             reduce using rule 3 (statement_list -> statement_list statement .)
    NUM             reduce using rule 3 (statement_list -> statement_list statement .)
    BOOL            reduce using rule 3 (statement_list -> statement_list statement .)
    LIST            reduce using rule 3 (statement_list -> statement_list statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement_list statement .)
    STRING          reduce using rule 3 (statement_list -> statement_list statement .)
    TRUE            reduce using rule 3 (statement_list -> statement_list statement .)
    FALSE           reduce using rule 3 (statement_list -> statement_list statement .)
    SIZE            reduce using rule 3 (statement_list -> statement_list statement .)
    REMOVE          reduce using rule 3 (statement_list -> statement_list statement .)
    HAS             reduce using rule 3 (statement_list -> statement_list statement .)
    LBRACKET        reduce using rule 3 (statement_list -> statement_list statement .)
    END             reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)


state 8

    (5) statement -> content_no_return .

    FUNC            reduce using rule 5 (statement -> content_no_return .)
    LOOP            reduce using rule 5 (statement -> content_no_return .)
    IF              reduce using rule 5 (statement -> content_no_return .)
    ID              reduce using rule 5 (statement -> content_no_return .)
    ADD             reduce using rule 5 (statement -> content_no_return .)
    CONSOLE         reduce using rule 5 (statement -> content_no_return .)
    NOT             reduce using rule 5 (statement -> content_no_return .)
    LPAREN          reduce using rule 5 (statement -> content_no_return .)
    STR             reduce using rule 5 (statement -> content_no_return .)
    NUM             reduce using rule 5 (statement -> content_no_return .)
    BOOL            reduce using rule 5 (statement -> content_no_return .)
    LIST            reduce using rule 5 (statement -> content_no_return .)
    NUMBER          reduce using rule 5 (statement -> content_no_return .)
    STRING          reduce using rule 5 (statement -> content_no_return .)
    TRUE            reduce using rule 5 (statement -> content_no_return .)
    FALSE           reduce using rule 5 (statement -> content_no_return .)
    SIZE            reduce using rule 5 (statement -> content_no_return .)
    REMOVE          reduce using rule 5 (statement -> content_no_return .)
    HAS             reduce using rule 5 (statement -> content_no_return .)
    LBRACKET        reduce using rule 5 (statement -> content_no_return .)
    END             reduce using rule 5 (statement -> content_no_return .)
    RBRACE          reduce using rule 5 (statement -> content_no_return .)
    RETURN          reduce using rule 5 (statement -> content_no_return .)


state 9

    (6) statement -> exp .
    (35) exp -> exp . operator exp
    (52) operator -> . PLUS
    (53) operator -> . MINUS
    (54) operator -> . MULTIPLY
    (55) operator -> . DIVIDE
    (56) operator -> . AND
    (57) operator -> . OR
    (58) operator -> . LT
    (59) operator -> . GT
    (60) operator -> . LE
    (61) operator -> . GE
    (62) operator -> . EQ
    (63) operator -> . NE

    FUNC            reduce using rule 6 (statement -> exp .)
    LOOP            reduce using rule 6 (statement -> exp .)
    IF              reduce using rule 6 (statement -> exp .)
    ID              reduce using rule 6 (statement -> exp .)
    ADD             reduce using rule 6 (statement -> exp .)
    CONSOLE         reduce using rule 6 (statement -> exp .)
    NOT             reduce using rule 6 (statement -> exp .)
    LPAREN          reduce using rule 6 (statement -> exp .)
    STR             reduce using rule 6 (statement -> exp .)
    NUM             reduce using rule 6 (statement -> exp .)
    BOOL            reduce using rule 6 (statement -> exp .)
    LIST            reduce using rule 6 (statement -> exp .)
    NUMBER          reduce using rule 6 (statement -> exp .)
    STRING          reduce using rule 6 (statement -> exp .)
    TRUE            reduce using rule 6 (statement -> exp .)
    FALSE           reduce using rule 6 (statement -> exp .)
    SIZE            reduce using rule 6 (statement -> exp .)
    REMOVE          reduce using rule 6 (statement -> exp .)
    HAS             reduce using rule 6 (statement -> exp .)
    LBRACKET        reduce using rule 6 (statement -> exp .)
    END             reduce using rule 6 (statement -> exp .)
    RBRACE          reduce using rule 6 (statement -> exp .)
    RETURN          reduce using rule 6 (statement -> exp .)
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    MULTIPLY        shift and go to state 53
    DIVIDE          shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56
    LT              shift and go to state 57
    GT              shift and go to state 58
    LE              shift and go to state 59
    GE              shift and go to state 60
    EQ              shift and go to state 61
    NE              shift and go to state 62

    operator                       shift and go to state 50

state 10

    (7) content_no_return -> function .

    FUNC            reduce using rule 7 (content_no_return -> function .)
    LOOP            reduce using rule 7 (content_no_return -> function .)
    IF              reduce using rule 7 (content_no_return -> function .)
    ID              reduce using rule 7 (content_no_return -> function .)
    ADD             reduce using rule 7 (content_no_return -> function .)
    CONSOLE         reduce using rule 7 (content_no_return -> function .)
    NOT             reduce using rule 7 (content_no_return -> function .)
    LPAREN          reduce using rule 7 (content_no_return -> function .)
    STR             reduce using rule 7 (content_no_return -> function .)
    NUM             reduce using rule 7 (content_no_return -> function .)
    BOOL            reduce using rule 7 (content_no_return -> function .)
    LIST            reduce using rule 7 (content_no_return -> function .)
    NUMBER          reduce using rule 7 (content_no_return -> function .)
    STRING          reduce using rule 7 (content_no_return -> function .)
    TRUE            reduce using rule 7 (content_no_return -> function .)
    FALSE           reduce using rule 7 (content_no_return -> function .)
    SIZE            reduce using rule 7 (content_no_return -> function .)
    REMOVE          reduce using rule 7 (content_no_return -> function .)
    HAS             reduce using rule 7 (content_no_return -> function .)
    LBRACKET        reduce using rule 7 (content_no_return -> function .)
    END             reduce using rule 7 (content_no_return -> function .)
    RBRACE          reduce using rule 7 (content_no_return -> function .)
    RETURN          reduce using rule 7 (content_no_return -> function .)


state 11

    (8) content_no_return -> function_return .

    FUNC            reduce using rule 8 (content_no_return -> function_return .)
    LOOP            reduce using rule 8 (content_no_return -> function_return .)
    IF              reduce using rule 8 (content_no_return -> function_return .)
    ID              reduce using rule 8 (content_no_return -> function_return .)
    ADD             reduce using rule 8 (content_no_return -> function_return .)
    CONSOLE         reduce using rule 8 (content_no_return -> function_return .)
    NOT             reduce using rule 8 (content_no_return -> function_return .)
    LPAREN          reduce using rule 8 (content_no_return -> function_return .)
    STR             reduce using rule 8 (content_no_return -> function_return .)
    NUM             reduce using rule 8 (content_no_return -> function_return .)
    BOOL            reduce using rule 8 (content_no_return -> function_return .)
    LIST            reduce using rule 8 (content_no_return -> function_return .)
    NUMBER          reduce using rule 8 (content_no_return -> function_return .)
    STRING          reduce using rule 8 (content_no_return -> function_return .)
    TRUE            reduce using rule 8 (content_no_return -> function_return .)
    FALSE           reduce using rule 8 (content_no_return -> function_return .)
    SIZE            reduce using rule 8 (content_no_return -> function_return .)
    REMOVE          reduce using rule 8 (content_no_return -> function_return .)
    HAS             reduce using rule 8 (content_no_return -> function_return .)
    LBRACKET        reduce using rule 8 (content_no_return -> function_return .)
    END             reduce using rule 8 (content_no_return -> function_return .)
    RBRACE          reduce using rule 8 (content_no_return -> function_return .)
    RETURN          reduce using rule 8 (content_no_return -> function_return .)


state 12

    (9) content_no_return -> loop .

    FUNC            reduce using rule 9 (content_no_return -> loop .)
    LOOP            reduce using rule 9 (content_no_return -> loop .)
    IF              reduce using rule 9 (content_no_return -> loop .)
    ID              reduce using rule 9 (content_no_return -> loop .)
    ADD             reduce using rule 9 (content_no_return -> loop .)
    CONSOLE         reduce using rule 9 (content_no_return -> loop .)
    NOT             reduce using rule 9 (content_no_return -> loop .)
    LPAREN          reduce using rule 9 (content_no_return -> loop .)
    STR             reduce using rule 9 (content_no_return -> loop .)
    NUM             reduce using rule 9 (content_no_return -> loop .)
    BOOL            reduce using rule 9 (content_no_return -> loop .)
    LIST            reduce using rule 9 (content_no_return -> loop .)
    NUMBER          reduce using rule 9 (content_no_return -> loop .)
    STRING          reduce using rule 9 (content_no_return -> loop .)
    TRUE            reduce using rule 9 (content_no_return -> loop .)
    FALSE           reduce using rule 9 (content_no_return -> loop .)
    SIZE            reduce using rule 9 (content_no_return -> loop .)
    REMOVE          reduce using rule 9 (content_no_return -> loop .)
    HAS             reduce using rule 9 (content_no_return -> loop .)
    LBRACKET        reduce using rule 9 (content_no_return -> loop .)
    END             reduce using rule 9 (content_no_return -> loop .)
    RBRACE          reduce using rule 9 (content_no_return -> loop .)
    RETURN          reduce using rule 9 (content_no_return -> loop .)


state 13

    (10) content_no_return -> conditional .

    FUNC            reduce using rule 10 (content_no_return -> conditional .)
    LOOP            reduce using rule 10 (content_no_return -> conditional .)
    IF              reduce using rule 10 (content_no_return -> conditional .)
    ID              reduce using rule 10 (content_no_return -> conditional .)
    ADD             reduce using rule 10 (content_no_return -> conditional .)
    CONSOLE         reduce using rule 10 (content_no_return -> conditional .)
    NOT             reduce using rule 10 (content_no_return -> conditional .)
    LPAREN          reduce using rule 10 (content_no_return -> conditional .)
    STR             reduce using rule 10 (content_no_return -> conditional .)
    NUM             reduce using rule 10 (content_no_return -> conditional .)
    BOOL            reduce using rule 10 (content_no_return -> conditional .)
    LIST            reduce using rule 10 (content_no_return -> conditional .)
    NUMBER          reduce using rule 10 (content_no_return -> conditional .)
    STRING          reduce using rule 10 (content_no_return -> conditional .)
    TRUE            reduce using rule 10 (content_no_return -> conditional .)
    FALSE           reduce using rule 10 (content_no_return -> conditional .)
    SIZE            reduce using rule 10 (content_no_return -> conditional .)
    REMOVE          reduce using rule 10 (content_no_return -> conditional .)
    HAS             reduce using rule 10 (content_no_return -> conditional .)
    LBRACKET        reduce using rule 10 (content_no_return -> conditional .)
    END             reduce using rule 10 (content_no_return -> conditional .)
    RBRACE          reduce using rule 10 (content_no_return -> conditional .)
    RETURN          reduce using rule 10 (content_no_return -> conditional .)


state 14

    (11) content_no_return -> var .

    FUNC            reduce using rule 11 (content_no_return -> var .)
    LOOP            reduce using rule 11 (content_no_return -> var .)
    IF              reduce using rule 11 (content_no_return -> var .)
    ID              reduce using rule 11 (content_no_return -> var .)
    ADD             reduce using rule 11 (content_no_return -> var .)
    CONSOLE         reduce using rule 11 (content_no_return -> var .)
    NOT             reduce using rule 11 (content_no_return -> var .)
    LPAREN          reduce using rule 11 (content_no_return -> var .)
    STR             reduce using rule 11 (content_no_return -> var .)
    NUM             reduce using rule 11 (content_no_return -> var .)
    BOOL            reduce using rule 11 (content_no_return -> var .)
    LIST            reduce using rule 11 (content_no_return -> var .)
    NUMBER          reduce using rule 11 (content_no_return -> var .)
    STRING          reduce using rule 11 (content_no_return -> var .)
    TRUE            reduce using rule 11 (content_no_return -> var .)
